fix bug in gutterable-elements declaration
Forgot a comma, so `label` and `h1` were getting truncated as `label
h1`.

--- a/src/core/_text.scss
+++ b/src/core/_text.scss
@@ -3,7 +3,7 @@
 
 $monospace-elements: "code, kbd";
 $headings: "h1, h2, h3, h4, h5, h6";
-$gutterable-elements: "p, ul, ol, li, aside, dd, figcaption, input, select, textarea, label #{$headings}";
+$gutterable-elements: "p, ul, ol, li, aside, dd, figcaption, input, select, textarea, label, #{$headings}";
 
 // Fonts
 $sans-serif: "Barlow", sans-serif;
